--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6754,22 +6754,36 @@ header {
 .mainContent .card {
   position: relative;
   height: 250px;
+  background-size: cover;
+  background-position: center;
   background-color: #20bf6b;
   border-radius: 8px;
   padding-top: 10px;
   padding-left: 10px;
   margin-bottom: 30px; }
+  .mainContent .card:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(107, 107, 107, 0.49);
+    border-radius: 8px; }
   .mainContent .card .date {
     display: inline-block;
     font-size: 26px;
     color: white;
     width: 80px;
-    line-height: 1.2; }
+    line-height: 1.2;
+    z-index: 2; }
   .mainContent .card .title {
     position: absolute;
     bottom: 5px;
     right: 10px;
     font-weight: bold;
-    color: #fff; }
+    color: #fff;
+    z-index: 2;
+    text-transform: uppercase; }
 
 /*# sourceMappingURL=app.css.map */
